--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <canvas id="experience-canvas" class="experience-canvas"></canvas>
     </div>
 
-    <script type="module" src="/public/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
